--- a/index.html
+++ b/index.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Gtunes</title>
 </head>
 <body>
     <header>
         <div class="menu_side">
-            <h1>Playlist</h1>
+            <h1>GTunes</h1>
             <div class="Playlist">
-                <h4><span></span>Playlist</h4>
-                <h4><span></span>Playlist</h4>
-                <h4><span></span>Playlist</h4>
+                <h4 class="active"><span></span><i class="bi bi-music-note-beamed"></i>Playlist</h4>
+                <h4><span></span><i class="bi bi-music-note-beamed"></i>Last List</h4>
+                <h4><span></span><i class="bi bi-music-note-beamed"></i>Recommended</h4>
+            </div>
+            <div class="menu_song">
+                <li class="songItem">
+
+                    <span>01</span>
+                </li>
             </div>
         </div>
         <div class="song_side"></div>
