--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         <div class="song_side"></div>
         <div class="master_play"></div>
     </header>
+
+    <section>
+        
+    </section>
     
     <script src="script.js"></script>
 </body>
